--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -3,26 +3,10 @@
   font-size: 18px;
   line-height: 22px;
   text-align: center;
-  margin: 0;
-  position: absolute;
-  top: 430px;
-  left: 412px;
-  max-width: 360px;
-  max-height: 66px;
+  margin: 26px 0 0 0;
+  max-width: 363px;
   z-index: 2;
-}
-@media screen and (max-width: 1024px) {
-  .cover__subtitle {
-    top: 379px;
-    left: 333px;
-  }
-}
 
-@media screen and (max-width: 768px) {
-  .cover__subtitle {
-    top: 295px;
-    left: 204px;
-  }
 }
 
 @media screen and (max-width: 320px) {
@@ -33,8 +17,5 @@
     line-height: 16px;
     text-align: center;
     max-width: 261px;
-    max-height: 70px;
-    top: 120px;
-    left: 33px;
   }
 }
