--- a/blocks/cover/__overlay/cover__overlay.css
+++ b/blocks/cover/__overlay/cover__overlay.css
@@ -1,6 +1,7 @@
 .cover__overlay {
-  width: 1184px;
-  height: 740px;
+  width: 100%;
+  height: 100%;
+  position: absolute;
   background-image: url(../../../image/cover-trains.jpg);
   background-repeat: round;
   opacity: 0.7;
@@ -8,23 +9,18 @@
 
 @media screen and (max-width: 1024px) {
   .cover__overlay {
-    width: 1024px;
-    height: 640px;
+    width: 100%;
   }
 }
 
 @media screen and (max-width: 768px) {
   .cover__overlay {
-    width: 768px;
-    height: 480px;
+    width: 100%;
   }
 }
 
 @media screen and (max-width: 320px) {
   .cover__overlay {
-    width: 320px;
-    height: 200px;
-    top: 34px;
-    left: 36px;
+    width: 100%;
   }
 }
