--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -1,9 +1,9 @@
 .footer__copyright {
-    margin: 0;
-  }
+  margin: 0;
+}
 
-  @media screen and (max-width: 320px) {
-    .footer__copyright {
-      margin: 13px 0 0 0;
-    }
+/*@media screen and (max-width: 320px) {
+  .footer__copyright {
+    margin: 13px 0 0 0;
   }
+}
