--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,32 +1,27 @@
 .header {
-  width: 1184px;
-  height: 52px;
-  margin: 0;
+  max-width: 100%;
+  margin: 28px 0 0 0;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: flex-end;
-  margin-top: 28px;
 }
 
 @media screen and (max-width: 1024px) {
   .header {
-    width: 928px;
-    height: 52px;
+    max-width: 928px;
   }
 }
 
 @media screen and (max-width: 768px) {
   .header {
-    width: 720px;
-    height: 52px;
+    max-width: 720px;
   }
 }
 
 @media screen and (max-width: 320px) {
   .header {
     margin: 16px 0 0 0;
-    width: 288px;
-    height: 42px;
+    max-width: 288px;
   }
 }
