--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -14,8 +14,7 @@
 
 @media screen and (max-width: 768px) {
   .intro__text {
-    width: 724px;
-    height: 208px;
+    max-width: 724px;
     margin: 38px 0 0 0;
   }
 }
@@ -23,7 +22,6 @@
 @media screen and (max-width: 320px) {
   .intro__text {
     max-width: 288px;
-    height: 520px;
     margin: 40px 0 0 0;
   }
 }
