--- a/pages/index.css
+++ b/pages/index.css
@@ -4,6 +4,8 @@
 
 @import url(../blocks/body/body.css);
 
+@import url(../page.css);
+
 @import url(../blocks/header/header.css);
 @import url(../blocks/header/__logo/header__logo.css);
 @import url(../blocks/header/__lang-links/__lang-links.css);
@@ -32,19 +34,21 @@
 @import url(../blocks/place/__title/place__title.css);
 @import url(../blocks/place/__image/place__image.css);
 @import url(../blocks/place/__website/place__website.css);
+ 
 @import url(../blocks/place/__website/_block/place__website_block.css);
 @import url(../blocks/place/__url-heading/place__url-heading.css);
 @import url(../blocks/place/__link/place__link.css);
-@import url(../blocks/place/__paragraph-one/place__paragraph-one.css);
-@import url(../blocks/place/__paragraph-two/place__paragraph-two.css);
+@import url(../blocks/place/__paragraph/place__paragraph.css);
+@import url(../blocks/place/__paragraph/_title/place__paragraph_title.css);
 
-@import url(../blocks/cover/cover.css);
-@import url(../blocks/cover/__overlay/cover__overlay.css);
+
+/* @import url(../blocks/cover/cover.css); */
+/* @import url(../blocks/cover/__overlay/cover__overlay.css); */
 @import url(../blocks/cover/__subtitle/cover__subtitle.css);
 @import url(../blocks/cover/__title/cover__title.css);
 
-@import url(../blocks/footer/footer.css);
+/* @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__links/footer__links.css);
 @import url(../blocks/footer/__link/footer__link.css);
 @import url(../blocks/footer/__copyright/footer__copyright.css);
-@import url(../blocks/footer/__link-nav/footer__link-nav.css);
+@import url(../blocks/footer/__link-nav/footer__link-nav.css); */
