--- a/blocks/cover/__overlay/cover__overlay.css
+++ b/blocks/cover/__overlay/cover__overlay.css
@@ -9,18 +9,18 @@
 
 @media screen and (max-width: 1024px) {
   .cover__overlay {
-    width: 100%;
+    max-width: 100%;
   }
 }
 
 @media screen and (max-width: 768px) {
   .cover__overlay {
-    width: 100%;
+    max-width: 100%;
   }
 }
 
 @media screen and (max-width: 320px) {
   .cover__overlay {
-    width: 100%;
+    max-width: 100%;
   }
 }
