--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,6 +1,6 @@
 .cover {
   position: relative;
-  width: 1184px;
+  width: 100%;
   min-height: 740px;
   display: flex;
   justify-content: center;
@@ -14,21 +14,18 @@
 
 @media screen and (max-width: 1024px) {
   .cover {
-    width: 1024px;
-    min-height: 640px;
+    max-width: 1024px;
   }
 }
 
 @media screen and (max-width: 768px) {
   .cover {
-    width: 768px;
-    min-height: 480px;
+    max-width: 768px;
   }
 }
 
 @media screen and (max-width: 320px) {
   .cover {
-    width: 320px;
-    min-height: 200px;
+    max-width: 320px;
   }
 }
