--- a/blocks/footer/__links/footer__links.css
+++ b/blocks/footer/__links/footer__links.css
@@ -5,8 +5,9 @@
   margin: 0;
 }
 
-/*@media screen and (max-width: 320px) {
+@media screen and (max-width: 320px) {
   .footer__links {
-    display: block;
+    display: flex;
+    flex-direction: column;
   }
 }
