--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -21,7 +21,7 @@
 
 @media screen and (max-width: 320px) {
   .footer {
-    max-width: 100%;
+    max-width: 186px;
     margin: 68px 0 0 36px;
     display: flex;
     flex-direction: column;
