--- a/blocks/cover/__overlay/cover__overlay.css
+++ b/blocks/cover/__overlay/cover__overlay.css
@@ -1,6 +1,6 @@
 .cover__overlay {
-  width: 100%;
-  height: 100%;
+  min-width: 1184px;
+  min-height: 740px;
   position: absolute;
   background-image: url(../../../image/cover-trains.jpg);
   background-repeat: round;
@@ -9,18 +9,21 @@
 
 @media screen and (max-width: 1024px) {
   .cover__overlay {
-    max-width: 100%;
+    min-width: 1024px;
+    min-height: 640px;
   }
 }
 
 @media screen and (max-width: 768px) {
   .cover__overlay {
-    max-width: 100%;
+    min-width: 768px;
+    min-height: 480px;
   }
 }
 
 @media screen and (max-width: 320px) {
   .cover__overlay {
-    max-width: 100%;
+    min-width: 320px;
+    min-height: 200px;
   }
 }
