--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,6 +1,5 @@
 .cover {
-  position: relative;
-  width: 100%;
+  max-width: 100%;
   min-height: 740px;
   display: flex;
   justify-content: center;
@@ -12,20 +11,23 @@
   opacity: 0.3;
 }
 
-@media screen and (max-width: 1024px) {
+ @media screen and (max-width: 1024px) {
   .cover {
-    max-width: 1024px;
+    max-width: 100%;
+    min-height: 640px;
   }
 }
 
 @media screen and (max-width: 768px) {
   .cover {
-    max-width: 768px;
+    max-width: 100%;
+    min-height: 480px;
   }
 }
 
 @media screen and (max-width: 320px) {
   .cover {
-    max-width: 320px;
+    max-width: 100%;
+    min-height: 200px;
   }
-}
+} 
