--- a/blocks/header/__lang-links/__lang-links.css
+++ b/blocks/header/__lang-links/__lang-links.css
@@ -5,11 +5,23 @@
   gap: 18px;
 }
 
+@media screen and (max-width: 1024px) {
+  .header__lang-links {
+    margin: 0;
+  }
+}
+
 @media screen and (max-width: 768px) {
   .header__lang-links {
-    margin: 0 0 0px;
+    margin: 0 25px 0 0;
     padding: 0;
     display: flex;
     gap: 23px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .header__lang-links {
+    margin: 0 15px 0 0;
   }
 }
