--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -1,9 +1,25 @@
 .header__logo {
   max-width: 176px;
+  margin: 26px 0 0 0;
+}
+
+@media screen and (max-width: 1024px) {
+  .header__logo {
+    max-width: 100%;
+    margin: 26px 0 0 0;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .header__logo {
+    max-width: 100%;
+    margin: 26px 0 0 25px;
+  }
 }
 
 @media screen and (max-width: 320px) {
   .header__logo {
     max-width: 142px;
+    margin: 0px 0 0 15px;
   }
 }
