--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,6 +1,6 @@
 .header {
   max-width: 100%;
-  margin: 28px 0 0 0;
+  margin: auto;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -9,19 +9,19 @@
 
 @media screen and (max-width: 1024px) {
   .header {
-    max-width: 928px;
+    max-width: 100%;
   }
 }
 
 @media screen and (max-width: 768px) {
   .header {
-    max-width: 720px;
+    max-width: 100%;
   }
 }
 
 @media screen and (max-width: 320px) {
   .header {
     margin: 16px 0 0 0;
-    max-width: 288px;
+    max-width: 100%;
   }
 }
