--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -2,11 +2,18 @@
   display: flex;
   flex-direction: column;
   max-width: 690px;
+  margin: 0 0 0 100px;
+}
+
+@media screen and (max-width: 1024px) {
+  .intro {
+    margin: 0;
+  }
 }
 
 @media screen and (max-width: 768px) {
   .intro {
-    margin: 0 0 0 24px;
+    margin: 0 0 0 25px;
   }
 }
 
