--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -2,6 +2,7 @@
   display: grid;
   grid-template-columns: repeat(4, 284px);
   grid-template-rows: repeat(3, 213px);
+  justify-content: center;
   gap: 16px;
   margin: 92px 0 92px 0;
 }
