--- a/blocks/place/__website/_block/place__website_block.css
+++ b/blocks/place/__website/_block/place__website_block.css
@@ -2,7 +2,7 @@
   margin: 107px 0 0 0;
 }
 
-/*@media screen and (max-width: 1024px) {
+@media screen and (max-width: 1024px) {
   .place__website_block {
     margin: 105px 0 0 0;
   }
@@ -10,7 +10,7 @@
 
 @media screen and (max-width: 768px) {
   .place__website_block {
-    margin-top: 9px;
+    margin-top: 50px;
   }
 }
 
