--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -4,11 +4,11 @@
   grid-template-columns: 460px 484px;
   grid-auto-rows: min-content(76px, auto);
   gap: 48px 40px;
-  padding: 0 0 80px 0;
+  margin: 0 0 80px 0;
 }
 
 .place:last-child {
-  padding: 0;
+  margin: 0;
 }
 
 @media screen and (max-width: 1024px) {
@@ -26,7 +26,7 @@
     grid-template-columns: 340px 352px;
     grid-auto-rows: min-content(76px, auto);
     gap: 45px 28px;
-    padding: 0 0 68px 0;
+    margin: 0 0 67px 0;
   }
 }
 
@@ -40,11 +40,19 @@
   }
 
   .place:nth-child(2){
-    margin: 29px 0 0 0;
+    margin: 47px 0 0 0;
+  }
+
+  .place:nth-child(3){
+    margin: 20px 0 0 0;
+  }
+
+  .place:nth-child(4){
+    margin: 20px 0 0 0;
   }
 
   .place:last-child{
-    margin: 29px 0 0 0;
+    margin: 45px 0 0 0;
   }
 }
 
