--- a/pages/index.css
+++ b/pages/index.css
@@ -28,13 +28,12 @@
 @import url(../blocks/photo-grid/__item/photo-grid__item.css);
 
 @import url(../blocks/places/places.css);
+@import url(../blocks/places-list/places-list.css);
 
 @import url(../blocks/place/place.css);
-@import url(../blocks/places-list/places-list.css);
 @import url(../blocks/place/__title/place__title.css);
 @import url(../blocks/place/__image/place__image.css);
 @import url(../blocks/place/__website/place__website.css);
- 
 @import url(../blocks/place/__website/_block/place__website_block.css);
 @import url(../blocks/place/__url-heading/place__url-heading.css);
 @import url(../blocks/place/__link/place__link.css);
@@ -42,8 +41,8 @@
 @import url(../blocks/place/__paragraph/_title/place__paragraph_title.css);
 
 
-/* @import url(../blocks/cover/cover.css); */
-/* @import url(../blocks/cover/__overlay/cover__overlay.css); */
+@import url(../blocks/cover/cover.css); 
+@import url(../blocks/cover/__overlay/cover__overlay.css);
 @import url(../blocks/cover/__subtitle/cover__subtitle.css);
 @import url(../blocks/cover/__title/cover__title.css);
 
