--- a/fonts/fonts.css
+++ b/fonts/fonts.css
@@ -2,22 +2,22 @@
     font-family: "inter";
     font-style: normal;
     font-weight: 400;
-    src: url("../Inter/Web/Inter-Regular.woff2") format("woff2"),
-      url("../Inter/Web/Inter-Regular.woff") format("woff");
+    src: url("../fonts/Inter/Inter-Regular.woff2") format("woff2"),
+      url("../fonts/Inter/Inter-Regular.woff") format("woff");
   }
   
   @font-face {
     font-family: "inter";
     font-style: normal;
     font-weight: 700;
-    src: url("../Inter/Web/Inter-Bold.woff2") format("woff2"),
-      url("../Inter/Web/Inter-Bold.woff") format("woff");
+    src: url("../fonts/Inter/Inter-Bold.woff2") format("woff2"),
+      url("../fonts/Inter/Inter-Bold.woff") format("woff");
   }
   
   @font-face {
     font-family: "inter";
     font-style: normal;
     font-weight: 900;
-    src: url("../Inter/Web/Inter-Black.woff2") format("woff2"),
-      url("../Inter/Web/Inter-Black.woff") format("woff");
+    src: url("../fonts/Inter/Inter-Black.woff2") format("woff2"),
+      url("../fonts/Inter/Inter-Black.woff") format("woff");
   }
