--- a/blocks/cover/__overlay/cover__overlay.css
+++ b/blocks/cover/__overlay/cover__overlay.css
@@ -1,26 +1,7 @@
 .cover__overlay {
-  width: 100%;
-  min-height: 740px;
+  max-width: 100%;
+  min-width: 100%;
   position: absolute;
-  background-image: url(../../../image/cover-trains.jpg);
-  background-repeat: round;
   opacity: 0.7;
-}
-
-@media screen and (max-width: 1024px) {
-  .cover__overlay {
-    min-height: 640px;
-  }
-}
-
-@media screen and (max-width: 768px) {
-  .cover__overlay {
-    min-height: 480px;
-  }
-}
-
-@media screen and (max-width: 320px) {
-  .cover__overlay {
-    min-height: 200px;
-  }
+  top: 0;
 }
