--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,5 +1,5 @@
 .cover {
-  max-width: 100%;
+  max-width: 1280px;
   min-height: 740px;
   display: flex;
   justify-content: center;
@@ -12,7 +12,7 @@
   opacity: 0.3;
 }
 
- @media screen and (max-width: 1024px) {
+@media screen and (max-width: 1024px) {
   .cover {
     max-width: 1024px;
     min-height: 640px;
@@ -31,4 +31,4 @@
     max-width: 320px;
     min-height: 200px;
   }
-} 
+}
