--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -5,23 +5,17 @@
   flex-direction: row;
   justify-content: space-between;
   align-items: flex-end;
+  margin: 25px 0 0 0;
 }
 
 @media screen and (max-width: 1024px) {
   .header {
-    max-width: 100%;
-  }
-}
-
-@media screen and (max-width: 768px) {
-  .header {
-    max-width: 100%;
+    margin: 0;
   }
 }
 
 @media screen and (max-width: 320px) {
   .header {
     margin: 16px 0 0 0;
-    max-width: 100%;
   }
-}
+} 
