--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -1,25 +1,22 @@
 .lead__image {
-  max-width: 984px;
+  max-width: 100%;
   margin: 64px 0 0 0;
 }
 
 @media screen and (max-width: 1024px) {
   .lead__image {
-    max-width: 928px;
     margin: 54px 0 0 0;
   }
 }
 
 @media screen and (max-width: 768px) {
   .lead__image {
-    max-width: 768px;
     margin: 56px 0 0 0;
   }
 }
 
 @media screen and (max-width: 320px) {
   .lead__image {
-    max-width: 320px;
     margin: 40px 0 0 0;
   }
 }
