--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -1,32 +1,74 @@
 .place {
-  max-width: 984px;
+  max-width: 100%;
   display: grid;
   grid-template-columns: 460px 484px;
-  grid-auto-rows: min-content(76px, auto);
   gap: 48px 40px;
-  margin: 0 0 80px 0;
 }
 
-.place:last-child {
-  margin: 0;
+.place:nth-child(2){
+  margin: 75px 0 0 0;
 }
+
+.place:nth-child(3){
+  margin: 88px 0 0 0;
+}
+
+.place:nth-child(4){
+  margin: 78px 0 0 0;
+}
+
+.place:last-child{
+  margin: 81px 0 0 0;
+}
+
 
 @media screen and (max-width: 1024px) {
-  .place {
+  .place {  
+    max-width: 100%;
     display: grid;
-    grid-template-columns: 440px 456px;
-    grid-auto-rows: min-content(76px, auto);
+    grid-template-columns: repeat(2, minmax(auto, 440px));
     gap: 48px 32px;
+  }
+
+  .place:nth-child(2){
+    margin: 75px 0 0 0;
+  }
+
+  .place:nth-child(3){
+    margin: 88px 0 0 0;
+  }
+
+  .place:nth-child(4){
+    margin: 78px 0 0 0;
+  }
+
+  .place:last-child{
+    margin: 81px 0 0 0;
   }
 }
 
 @media screen and (max-width: 768px) {
   .place {
     display: grid;
-    grid-template-columns: 340px 352px;
-    grid-auto-rows: min-content(76px, auto);
-    gap: 45px 28px;
+    grid-template-columns: repeat(2, minmax(auto, 340px));
+    gap: 46px 29px;
     margin: 0 0 67px 0;
+  }
+
+  .place:nth-child(2){
+    margin: 74px 0 0 0;
+  }
+
+  .place:nth-child(3){
+    margin: 67px 0 0 0;
+  }
+
+  .place:nth-child(4){
+    margin: 65px 0 0 0;
+  }
+
+  .place:last-child{
+    margin: 65px 0 0 0;
   }
 }
 
@@ -35,24 +77,23 @@
     display: grid;
     grid-template-columns: 320px;
     gap: 32px;
-    padding: 0;
-    margin: 0;
+    margin: 0 0 67px 0;
   }
 
   .place:nth-child(2){
-    margin: 47px 0 0 0;
+    margin: 73px 0 0 0;
   }
 
   .place:nth-child(3){
-    margin: 20px 0 0 0;
+    margin: 52px 0 0 0;
   }
 
   .place:nth-child(4){
-    margin: 20px 0 0 0;
+    margin: 50px 0 0 0;
   }
 
   .place:last-child{
-    margin: 45px 0 0 0;
+    margin: 76px 0 0 0;
   }
 }
 
