--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -1,15 +1,32 @@
 .places {
-  margin: 0 0 92px 77px;
+  max-width: 984px;
+  margin: 0 auto;
+  margin-bottom: 90px;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
 }
 
 @media screen and (max-width: 1024px) {
   .places {
-    margin: 0 0 92px 0px;
+    max-width: 928px;
+    margin: 0 auto;
+    margin-bottom: 90px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .places {
+    max-width: 720px;
+    margin: 0 auto;
+    margin-bottom: 90px;
   }
 }
 
 @media screen and (max-width: 320px) {
   .places {
-    margin: 0 0 42px;
+    max-width: 320px;
+    margin: 0 auto;
+    margin-bottom: 45px;
   }
 }
