--- a/pages/index.css
+++ b/pages/index.css
@@ -17,6 +17,7 @@
 @import url(../blocks/lead/__title/lead__title.css);
 @import url(../blocks/lead/__subtitle/lead__subtitle.css);
 @import url(../blocks/lead/__image/lead__image.css);
+@import url(../blocks/lead/__caption-links/lead__caption-links.css);
 @import url(../blocks/lead/__caption/lead__caption.css);
 
 @import url(../blocks/intro/intro.css);
