--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -5,7 +5,7 @@
   flex-direction: row;
   justify-content: space-between;
   align-items: flex-end;
-  margin: 25px 0 0 0;
+  margin-top: 25px;
 }
 
 @media screen and (max-width: 1024px) {
