--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -1,9 +1,20 @@
 .footer__copyright {
   margin: 0;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 16px;
+}
+
+@media screen and (max-width: 768px) {
+  .footer__copyright {
+    font-size: 2vw;
+  }
 }
 
 @media screen and (max-width: 320px) {
   .footer__copyright {
     margin: 13px 0 0 0;
+    font-size: 14px;
   }
 }
+
