--- a/blocks/cover/__overlay/cover__overlay.css
+++ b/blocks/cover/__overlay/cover__overlay.css
@@ -2,6 +2,8 @@
   max-width: 100%;
   min-width: 100%;
   position: absolute;
-  opacity: 0.7;
   top: 0;
+  bottom: 0;
+  background-image: url(../../../image/cover-trains.jpg);
+  background-repeat: round;
 }
