--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -1,21 +1,32 @@
-.cover__subtitle {
-  font-weight: 400;
-  font-size: 18px;
-  line-height: 22px;
-  text-align: center;
-  margin: 26px 0 0 0;
-  max-width: 363px;
-  z-index: 2;
-
-}
-
-@media screen and (max-width: 320px) {
-  .cover__subtitle {
-    font-style: normal;
+.cover__subtitle{
+    max-width: 360px;
     font-weight: 400;
-    font-size: 14px;
-    line-height: 16px;
+    font-size: 18px;
+    line-height: 22px;
     text-align: center;
-    max-width: 261px;
-  }
+    margin: 0;
+    color: #ffff;
+    margin-top: 40px;
 }
+
+@media screen and (max-width: 768px) {
+    .cover__subtitle {
+        margin-top: 30px;
+    }
+  }
+
+@media screen and (max-width: 440px) {
+    .cover__subtitle {
+        font-size: 6vw;
+    }
+  }
+
+@media screen and (max-width: 340px) {
+    .cover__subtitle {
+        margin: 15px 0px 22px 0px;
+        max-width: 267px;
+        font-weight: 400;
+        font-size: 14px;
+        line-height: 16px;
+    }
+  }
