--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,27 +1,26 @@
 .cover {
-  max-width: 1280px;
+  max-width: 100%;
   min-height: 740px;
+  background-image: url(../../../image/cover-trains.jpg);
+  background-repeat: round;
   display: flex;
+  flex-direction: column;
+  align-content: center;
   justify-content: center;
   align-items: center;
-  flex-direction: column;
   position: relative;
-}
-
-.cover:hover {
-  opacity: 0.3;
 }
 
 @media screen and (max-width: 1024px) {
   .cover {
-    max-width: 1024px;
+    width: 1024px;
     min-height: 640px;
   }
 }
 
 @media screen and (max-width: 768px) {
   .cover {
-    max-width: 768px;
+    width: 100%;
     min-height: 480px;
   }
 }
