--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -1,11 +1,10 @@
 .footer__link {
-  margin: 0;
-  padding: 0 18px 0 0;
+  margin: 0 18px 0 0;;
+  padding: 0;
 }
 
 @media screen and (max-width: 320px) {
   .footer__link {
     margin: 0 0 32px 0;
-    padding: 0;
   }
 }
