--- a/blocks/header/__block/header__block.css
+++ b/blocks/header/__block/header__block.css
@@ -7,13 +7,17 @@
 }
 
 .header__block:hover {
-  color: #aaa;
+  opacity: 0.8;
+}
+
+@media screen and (max-width: 768px) {
+  .header__block {
+    font-size: 7vw;
+  }
 }
 
 @media screen and (max-width: 320px) {
   .header__block {
-    font-style: normal;
-    font-weight: 400;
     font-size: 18px;
     line-height: 20px;
   }
