--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -9,6 +9,7 @@
 }
 @media screen and (max-width: 768px) {
   .lead__subtitle {
+    font-size: 5vw;
     margin: 30px 0 0 0;
   }
 }
@@ -16,8 +17,6 @@
 @media screen and (max-width: 320px) {
   .lead__subtitle {
     max-width: 288px;
-    font-style: normal;
-    font-weight: 400;
     font-size: 16px;
     line-height: 20px;
     margin: 14px 0 0 0;
