--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -10,6 +10,7 @@
 
 @media screen and (max-width: 1024px) {
   .lead__title {
+    font-size: 10vw;
     margin: 50px 0 0 0;
   }
 }
@@ -17,8 +18,6 @@
 @media screen and (max-width: 320px) {
   .lead__title {
     max-width: 288px;
-    font-style: normal;
-    font-weight: 900;
     font-size: 40px;
     line-height: 44px;
   }
