--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -5,7 +5,7 @@
 
 @media screen and (max-width: 1024px) {
     .page {
-      max-width: 1024px;
+      max-width: 100%;
     }
   }
   
@@ -14,9 +14,11 @@
       max-width: 768px;
     }
   }
-  
+
   @media screen and (max-width: 320px) {
     .page {
       max-width: 320px;
     }
   }
+
+  
