--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -1,15 +1,19 @@
 .place__paragraph {
-  max-width: 481px;
+  font-style: normal;
   font-weight: 400;
   font-size: 18px;
   line-height: 29px;
-  margin: 0;
+  margin: 0 0 26px 0;
+  padding: 0;
 }
+
+/* .place__paragraph:last-child{
+  margin: 0;
+} */
 
 @media screen and (max-width: 768px) {
   .place__paragraph {
-    font-style: normal;
-    font-weight: 400;
+    margin: 0 0 25px 0;
     font-size: 16px;
     line-height: 26px;
   }
@@ -18,11 +22,7 @@
 @media screen and (max-width: 320px) {
   .place__paragraph {
     max-width: 288px;
-    font-style: normal;
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 26px;
-    padding: 0;
-    margin: 0 0 25px 16px;
+    margin: 0 0 23px 17px;
   }
+  
 }
