--- a/blocks/place/__website/place__website.css
+++ b/blocks/place/__website/place__website.css
@@ -2,12 +2,9 @@
   max-width: 456px;
   margin: 30px 0 0 0;
   padding: 0;
-}
-
-@media screen and (max-width: 1024px) {
-  .place__website {
-    margin: 30px 0 0 0;
-  }
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
 }
 
 @media screen and (max-width: 768px) {
