--- a/blocks/places-list/places-list.css
+++ b/blocks/places-list/places-list.css
@@ -1,4 +1,4 @@
-.places-list {
+/* .places-list {
   margin: 0;
   padding: 0;
   
@@ -10,7 +10,7 @@
   }
 }
 
-/* @media screen and (max-width: 320px) {
+@media screen and (max-width: 320px) {
   .places-list {
     display: grid;
     grid-template-columns: 320px;
