--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -7,26 +7,26 @@
   flex-direction: column;
 }
 
+.places ul {
+  margin: 0;
+  padding: 0;
+}
+
 @media screen and (max-width: 1024px) {
   .places {
     max-width: 928px;
-    margin: 0 auto;
-    margin-bottom: 90px;
   }
 }
 
 @media screen and (max-width: 768px) {
   .places {
     max-width: 720px;
-    margin: 0 auto;
-    margin-bottom: 90px;
   }
 }
 
 @media screen and (max-width: 320px) {
   .places {
     max-width: 320px;
-    margin: 0 auto;
     margin-bottom: 45px;
   }
 }
