--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -7,10 +7,16 @@
   line-height: 36px;
   text-align: center;
 }
+
 @media screen and (max-width: 768px) {
   .lead__subtitle {
-    font-size: 5vw;
     margin: 30px 0 0 0;
+  }
+}
+
+@media screen and (max-width: 440px) {
+  .lead__subtitle {
+    font-size: 5vw;
   }
 }
 
