--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -4,6 +4,8 @@
   font-size: 72px;
   line-height: 76px;
   margin: 0;
+  display: grid;
+  align-items: end;
 }
 
 @media screen and (max-width: 768px) {
