--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -23,6 +23,11 @@
     gap: 49px 28px;
     margin: 0 0 65px 0;
   }
+
+  .place:nth-child(4) {
+    margin: 0 0 45px 0;
+  }
+
 }
 
 @media screen and (max-width: 440px) {
@@ -35,8 +40,6 @@
 
 @media screen and (max-width: 320px) {
   .place {
-    grid-template-columns: minmax(auto, 320px);
-    gap: 32px;
     margin: 0 0 40px 0;
   }
 }
