--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -5,16 +5,10 @@
   line-height: 16px;
 }
 
-@media screen and (max-width: 768px) {
-  .footer__copyright {
-    font-size: 1vw;
-  }
-}
-
 @media screen and (max-width: 320px) {
   .footer__copyright {
     margin: 13px 0 0 0;
-    font-size: 14px;
+    line-height: 14px;
   }
 }
 
