--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -3,7 +3,7 @@
   font-weight: 400;
   font-size: 18px;
   line-height: 29px;
-  margin: 0 0 26px 0;
+  margin: 0 0 25px 0;
   padding: 0;
 }
 
@@ -21,12 +21,12 @@
 
 @media screen and (max-width: 320px) {
   .place__paragraph {
-    max-width: 288px;
-    margin: 0 0 23px 17px;
+    max-width: 283px;
+    margin: 0 0 27px 18px;
   }
   
   .place__paragraph:last-child{
-    margin: 0 0 26px 17px;
+    margin: 0 0 0 18px;
   }
   
 }
